fix left margin on mobile in teaserHero

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -169,6 +169,9 @@
     h3,
     p {
       padding-left: 20px;
+      @media only screen and (max-width: @largestMobileScreen) {
+        padding-left: 0;
+      }
     }
 
     @media only screen and (max-width: @largestMobileScreen) {
